--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             
             <div class="contact-info">
                 <div class="contact-details">
-                    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                    <p>Phone: <a href="tel:+1234567890">+1234567890</a></p>
+                    <p>Email: <a href="mailto:surendra.m@hashtagsocials.in">surendra.m@hashtagsocials.in</a></p>
+                    <p>Phone: <a href="tel:+91 9110721017">+91 9110721017</a></p>
                     <div class="social">
                         <ul> 
                             <li><a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
